Bug 93114 - Insert Special Character - Not reading Fonts Correctly
Summary: Insert Special Character - Not reading Fonts Correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.0.0.4 rc
Hardware: Other All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:5.1.0 target:5.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-08-04 05:53 UTC by David
Modified: 2016-10-25 19:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
domnio characters are not being displayed. most special characters are not. (44.16 KB, image/png)
2015-08-04 23:25 UTC, David
Details
incorrect font table (5.0.0.x) (44.16 KB, image/png)
2015-08-05 00:33 UTC, David
Details
Correct font table (4.4.5.2) (35.82 KB, image/png)
2015-08-05 00:34 UTC, David
Details
Font with Unicode Symbols (1.70 MB, application/font-sfnt)
2015-08-06 03:15 UTC, David
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2015-08-04 05:53:18 UTC
All the special characters in almost every font seem to have disappeared in the upgrade from 5.0.0.4 to 5.0.0.5

I can no longer see the characters I want when I choose the font I know that has them in its table.
Comment 1 Jacques Guilleron 2015-08-04 14:51:32 UTC
Hi David,

To be quite clear, can you join a screenshot?

Thank you,
Comment 2 David 2015-08-04 23:25:21 UTC
Created attachment 117657 [details]
domnio characters are not being displayed. most special characters are not.

I need access to special characters so I will need to roll back to 5.0.0.4
Comment 3 David 2015-08-05 00:32:34 UTC
My mistake, the incorrect font tables appear to be all 5.0.0.x releases.
I can reproduce on 5.0.0.2, 5.0.0.4, and 5.0.0.5

Downgrading to 4.4.5.2 restores the correct behaviour.

Deleting my profile did not fix the problem in 5.0.0.x
Comment 4 David 2015-08-05 00:33:20 UTC
Created attachment 117660 [details]
incorrect font table (5.0.0.x)
Comment 5 David 2015-08-05 00:34:05 UTC
Created attachment 117661 [details]
Correct font table (4.4.5.2)
Comment 6 David 2015-08-05 00:36:02 UTC
I suspect that this bug and the other special character bug I reported (bug 93113) are so closely related that they are probably the same problem...i.e. the insert special character dialog code needs some attention.
Comment 7 David 2015-08-06 03:15:35 UTC
Created attachment 117691 [details]
Font with Unicode Symbols

The sub categories for the Segoe UI Symbol font aren't read correctly in the 5.0.0.x series. 

Subcategories like Dominoes are not displayed in the font table for special character insertion.

Test it by using the font in the 4.4.5.x series and they *are* available.
Comment 8 urly 2015-08-16 06:36:53 UTC
With LO 5.0.1.1 64 bit the same problem: some not-shown special characters and some wrong code page.

For example: the Unicode characters
0x21D4 <=>
0x21C4 arrow left and right above.
If I mouseclick the crossed field, the correct char. is shown in the textfield.
Comment 9 Commit Notification 2015-08-17 07:59:51 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ab936a4e4277e248a64faa702d4e889f69527b3e

tdf#93114 insert character: add missing recalculate for font selection

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 László Németh 2015-08-17 08:17:04 UTC
The problem was the missing (lost) recalculation at font selection. Thanks for your help!

Full commit description:

tdf#93114 insert character: add missing recalculate for font selection

Fixing missing characters (only characters of the basic Control font showed by Insert special character dialog) and freezing (when LibreOffice tried to replace hundred of characters [missing from the chosen font] during scrolling in the insert special character dialog).
Comment 11 Commit Notification 2015-08-17 12:28:08 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea5763a7dea0cff7762ded5e103f7ae502eea737&h=libreoffice-5-0

tdf#93114 insert character: add missing recalculate for font selection

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2015-08-17 12:29:25 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=758b4c7feaca5ecc2da6b574919d3a5ad667a84c&h=libreoffice-5-0-1

tdf#93114 insert character: add missing recalculate for font selection

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.