tdf#93114 insert character: add missing recalculate for font selection

Fixing missing characters (only characters of the basic Control font
showed by Insert special character dialog) and freezing (when
LibreOffice tried to replace hundred of characters [missing from the
chosen font] during scrolling in the insert special character dialog).

Change-Id: I8fd5bd233f16572eb2b740a8f8e7e8608c19d06f
Reviewed-on: https://gerrit.libreoffice.org/17792
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>